# worldmap-dektop

./: .dockerignore  .env.tmpl  .gitignore  Dockerfile  Makefile  README.md  do_harvest_shipdata.sh  do_map_updates.sh  docker-compose-prod.yml  docker-compose.yml  install.sh  map_system_daemon.py  pyproject.toml  wallpaper_update_daemon.py  wallpaper_updater.sh  worldmap-install.sh  worldmap.sh
.github/workflows/: docker-publish.yml  ruff.yml
config/: common.conf  worldmap.conf  worldmap.conf.example  xplanet.conf
config/database/: 001_create_dbs.sql
data/: ship_cache.json.example
markers/: extra_world_markers.txt  worldmap_markers.txt
scripts/: harvest_ship_data  run_xplanet  update_clouds  update_clouds_nasa  update_composite_image  update_isobars  update_quakes  update_shipping  update_storms  update_volcanoes
src/worldmap/: api.py  map_builder.py  shipping_collector.py  weather_scanner.py
src/worldmap/lib/: config.py  db.py  logging.py  maps.py  shipping.py
src/worldmap/tasks/: clouds.py  clouds_nasa.py  common.py  composite.py  currents.py  isobars.py  lightning.py  ozone.py  precipitation.py  quakes.py  renderer.py  satellites.py  shipping.py  sst.py  storms.py  stormwatch.py  temperature.py  volcanoes.py  waves.py  wind.py
tests/: common.py  test_clouds.py  test_composite.py  test_isobars.py  test_lightning.py  test_map_downloader.py  test_precipitation.py  test_quakes.py  test_renderer.py  test_satellites.py  test_shipping.py  test_sst.py  test_storms.py  test_temperature.py  test_volcanoes.py  test_waves.py
ui/: index.html
