[project]
name = "worldmap"
version = "0.1.0"
description = "Builds overlays and marker files for Xplanet"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Paul Waite", email = "paulwaite87@gmail.com" },
]
# Core dependencies for the WorldMap system
dependencies = [
    "aiohttp>=3.13.5",
    "beautifulsoup4==4.14.3",
    "cartopy==0.25.0",
    "cfgrib==0.9.15.1",
    "configparser==7.2.0",
    "dask==2026.3.0",
    "datetime==6.0",
    "eccodes==2.46.0",
    "eccodes-python==0.9.9",
    "fastapi>=0.136.1",
    "fsspec>=2026.3.0",
    "h5netcdf>=1.8.1",
    "h5py>=3.16.0",
    "idna==3.11",
    "matplotlib==3.10.8",
    "netcdf4==1.7.4",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "pillow==12.2.0",
    "pip>=26.1.1",
    "psycopg2-binary>=2.9.12",
    "pydap==3.5.9",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.1.post1",
    "requests==2.33.1",
    "scipy==1.17.1",
    "six==1.17.0",
    "soupsieve==2.8.3",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
    "uvicorn>=0.47.0",
    "websocket-client==1.9.0",
    "websockets==16.0",
    "xarray==2026.4.0",
    "zope-interface==8.3",
]

[project.scripts]
worldmap-harvest = "worldmap.harvest:main"
worldmap-builder = "worldmap.map_builder:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worldmap"]

[tool.uv]
# Moved linting and formatting tools to dev-dependencies
dev-dependencies = [
    "black>=26.3.1",
    "ruff>=0.15.11",
    "watchdog>=6.0.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:numpy.ndarray size changed:RuntimeWarning"
]